Change name from Gramin Samriddhi to Agri Rise

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Gramin Samriddhi">
-    <title>Gramin Samriddhi - AI Farmer Assistant</title>
+    <title> Agri-Rise</title> - AI Farmer Assistant</title>
     <meta name="description" content="AI-powered mobile assistant for farmers with crop recommendations and disease detection" />
     <meta name="author" content="Lovable" />
 
