Change website name to Agri Rise

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#3e7b3e">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="Gramin Samriddhi">
+    <meta name="apple-mobile-web-app-title" content="Agri Rise">
     <title> Agri-Rise</title> - AI Farmer Assistant</title>
     <meta name="description" content="AI-powered mobile assistant for farmers with crop recommendations and disease detection" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="Gramin Samriddhi - AI Farmer Assistant" />
+    <meta property="og:title" content="Agri Rise - AI Farmer Assistant" />
     <meta property="og:description" content="AI-powered mobile assistant for farmers with crop recommendations and disease detection" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
